# RTOS-Labs

./: .clang-format  CMakeLists.txt  README.md
.cache/clangd/index/: main.c.D1566A95E92754C4.idx
src/: main.c
